[package]
edition = "2018"
name = "deno_std_wasm_crypto"
repository = "https://github.com/denoland/deno_std"
authors = ["the Deno authors"]
license = "MIT"
publish = false
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 3

[dependencies]
blake2 = "0.9.1"
blake3 = "0.3.8"
derive_more = "0.99.16"
digest = "0.9.0"
js-sys = "0.3.51"
md-5 = "0.9.1"
ripemd160 = "0.9.1"
sha-1 = "0.9.5"
sha2 = "0.9.5"
sha3 = "0.9.1"
wasm-bindgen = "0.2.74"
