# Copyright 2018-2021 the Deno authors. All rights reserved. MIT license.

[package]
edition = "2018"
name = "deno_std_wasm_crypto"
repository = "https://github.com/denoland/deno_std"
authors = ["the Deno authors"]
license = "MIT"
publish = false
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 3

[dependencies]
blake2 = "0.9.1"
derive_more = "0.99.16"
digest = "0.9.0"
generic-array = "0.14.4"
js-sys = "0.3.51"
md-5 = "0.9.1"
ripemd160 = "0.9.1"
sha-1 = "0.9.7"
sha2 = "0.9.5"
sha3 = "0.9.1"
typenum = "1.13.0"
wasm-bindgen = "0.2.74"

[dependencies.blake3]
version = "1.0.0"
features = ["std", "traits-preview"]
