# Copyright 2018-2021 the Deno authors. All rights reserved. MIT license.

[package]
edition = "2018"
name = "deno_std_wasm_crypto"
repository = "https://github.com/denoland/deno_std"
authors = ["the Deno authors"]
license = "MIT"
publish = false
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 3

[dependencies]
blake2 = "0.10.1"
blake3 = { version = "1.3.0", features = ["traits-preview"] }
derive_more = "0.99.17"
digest = { version = "0.10.1", features = ["core-api", "std"] }
generic-array = "0.14.5"
js-sys = "0.3.55"
md4 = "0.10.0"
md-5 = "0.10.0"
ripemd = "0.1.0"
sha-1 = "0.10.0"
sha2 = "0.10.1"
sha3 = "0.10.0"
tiger = "0.2.0"
typenum = "1.15.0"
wasm-bindgen = "0.2.78"
