# Copyright 2018-2019 the Deno authors. All rights reserved. MIT license.

[package]
name = "deno_cargo_plugin"
version = "0.1.0"
authors = ["The deno authors"]
edition = "2018"

[lib]
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
deno = { path = "../../deno/core" }

cargo = "0.35.0"
serde_json = "1.0.39"
serde = { version = "1.0", features = ["derive"] }
url = "1.7.2"
