# Copyright 2018-2021 the Deno authors. All rights reserved. MIT license.

[package]
edition = "2018"
name = "deno_std_wasm_crypto"
repository = "https://github.com/denoland/deno_std"
authors = ["the Deno authors"]
license = "MIT"
publish = false
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 3

[dependencies]
blake2 = "0.10.4"
blake3 = { version = "1.3.1", features = ["traits-preview"] }
derive_more = "0.99.17"
digest = { version = "0.10.5", features = ["core-api", "std"] }
generic-array = "0.14.6"
js-sys = "0.3.60"
md4 = "0.10.2"
md-5 = "0.10.5"
ripemd = "0.1.3"
sha-1 = "0.10.0"
sha2 = "0.10.6"
sha3 = "0.10.5"
tiger = "0.2.1"
typenum = "1.15.0"
wasm-bindgen = "0.2.83"
