[package]
name = "deno-hash"
version = "0.1.0"
authors = ["the Deno authors"]
edition = "2018"
license = "MIT"
repository = "https://github.com/denoland/deno_std"

[lib]
crate-type = ["cdylib"]

[dependencies]
blake2 = "0.9.1"
blake3 = "0.3.8"
digest = "0.9.0"
js-sys = "0.3.51"
md-5 = "0.9.1"
md2 = "0.9.0"
md4 = "0.9.0"
ripemd160 = "0.9.1"
ripemd320 = "0.9.0"
sha-1 = "0.9.6"
sha2 = "0.9.5"
sha3 = "0.9.1"
wasm-bindgen = "0.2.74"

[profile.release]
lto = true
opt-level = 3
